--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/ticket_system?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=mysql
-spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.datasource.password=root123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
